Redeployment after optimization

--- a/centra-client/public/index.html
+++ b/centra-client/public/index.html
@@ -48,7 +48,7 @@
     gtag('config', 'UA-211139465-1');
   </script>
 
-  <title>Centra Medical</title>
+  <title>Centra For Supplies</title>
 </head>
 
 <body>
